--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Maze
 
 requires SDL2 development files ie, SDL.h
 
-![Maze](https://github.com/18684092/Maze/blob/master/Screenshot%20from%202019-06-25%2013-02-07.png)
+[Maze Wiki](https://github.com/18684092/Maze/wiki)
